Wed Apr 17 11:27:04 2002  Jason Tishler <jason@tishler.net>

	* security.cc (get_lsa_srv_inf): Prevent extraneous backslashes for
	the NT Domain case.

2002-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* net.cc (cygwin_accept): Set socket type for accepted socket.
	(socketpair): Set socket type for both sockets.

2002-04-12  Egor Duda  <deo@logos-m.ru>

	* fhandler.h (class fhandler_socket): New member to store socket type.  
	(fhandler_socket::get_socket_type): Access it.
	(fhandler_socket::set_socket_type): Ditto.
	* net.cc (cygwin_socket): Store socket type.
	(cygwin_connect): Disable security checks for connectionless sockets.
	(cygwin_accept): Ditto.

2002-04-09  Mark Bradshaw  <bradshaw@staff.crosswalk.com>

	* cygwin.din: Add strptime.
	* include/cygwin/version.h: Increment API version number.

2002-04-09  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (fork_child): Call fixup_mmaps_after_fork() somewhat earlier.

2002-04-09  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::open): Set read-only bit in
	file_attributes when adequate.

2002-03-28  Christopher Faylor  <cgf@redhat.com>

	* times.cc (gettimeofday): Fix typo in previous patch.

2002-03-27  Wu Yongwei  <adah@netstd.com>

	* times.cc (gettimeofday): Revert to setting timezone info if tz !=
	NULL.

2002-03-21  Christopher Faylor  <cgf@redhat.com>

	* fhandler_disk_file.cc (fhandler_disk_file::fstat_helper): Always set
	st_[ug]id to value derived from get_file_attributes.

2002-03-21  Christopher Faylor  <cgf@redhat.com>

	* spawn.cc (find_exec): Return input if file not found.

2002-03-19  Boris Schaeling  <boriss@web.de>

        * poll.cc (poll): Add support for invalid descriptors.

2002-03-15  Robert Collins  <rbtcollins@hotmail.com>

	* fhandler.h (fhandler_termios::lseek): Override lseek.
	* fhandler_termios.cc (fhandler_termios::lseek): Implement this.

2002-03-15  Christopher Faylor  <cgf@redhat.com>

	* cygserver.cc: Include stdlib.h for exit declaration.